add_subdirectory(hub)
add_subdirectory(manager)

if(VISTLE_USE_QT5)
    vistle_find_package(Qt5 5.15 COMPONENTS Widgets)
    if(Qt5_FOUND)
        function(qt_disable_unicode_defines)

        endfunction()
    else()
        return()
    endif()
else()
    vistle_find_package(Qt6 COMPONENTS Widgets)
    if(NOT Qt6_FOUND)
        return()
    endif()
endif()

add_subdirectory(gui)
add_subdirectory(opener)
