add_subdirectory(hub)
add_subdirectory(manager)
add_subdirectory(config)

if(VISTLE_USE_QT5)
    vistle_find_package(Qt5 5.15 COMPONENTS Core Widgets)
    if(NOT Qt5_FOUND)
        return()
    endif()
    target_compile_definitions(Qt5::Core INTERFACE QT_DISABLE_DEPRECATED_UP_TO=0x051500)
else()
    vistle_find_package(Qt6 COMPONENTS Core Widgets)
    if(NOT Qt6_FOUND)
        return()
    endif()
    target_compile_definitions(Qt6::Core INTERFACE QT_DISABLE_DEPRECATED_UP_TO=0x051500)
endif()

add_subdirectory(gui)
add_subdirectory(opener)
